force-app/main/default/objects/ZP_Company_Migration__c/ZP_Company_Migration__c.object-meta.xml
<CustomObject>
    <description>Heroku Connect integration</description>
    <label>ZP Company Migration</label>
    <nameField>
        <displayFormat>MIG{0000000000}</displayFormat>
        <label>Migration No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Company Migrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>