force-app/main/default/objects/ZP_Company_Migration__c/fields/Active_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Employee_Count__c</fullName>
    <description>company_migration 
MIGRATION_ATTRIBUTES 
active_employee_count
number</description>
    <label>Active Employee Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>