force-app/main/default/objects/ZP_Company_Migration__c/fields/COVID_19_relief_programs__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_relief_programs__c</fullName>
    <description>Field created to track Covid 19 relief programs selected by customers in-app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>COVID-19 relief programs?</label>
    <type>TextArea</type>
</CustomField>