force-app/main/default/objects/ZP_Company_Migration__c/fields/Custom_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Custom_Deductions__c</fullName>
    <description>custom_deductions</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Deductions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>