force-app/main/default/objects/ZP_Company_Migration__c/fields/Deductions_List__c.field-meta.xml
<CustomField>
    <fullName>Deductions_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deductions List</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>