force-app/main/default/objects/ZP_Company_Migration__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>External concatenation, lowercase, no spaces, hyphen delimited  

database - model name - record id

(e.g. zp-company_migration-4343222)</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>