force-app/main/default/objects/ZP_Company_Migration__c/fields/First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Check_Date__c</fullName>
    <description>company_migration 
MIGRATION_ATTRIBUTES 
first_check_date
date</description>
    <label>First Check Date</label>
    <type>Date</type>
</CustomField>