force-app/main/default/objects/ZP_Company_Migration__c/fields/Other_Financial_Benefits_Currently_Offer__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Benefits_Currently_Offer__c</fullName>
    <description>other_financial_benefits_currently_offered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Financial Benefits Currently Offer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>