force-app/main/default/objects/ZP_Company_Migration__c/fields/Other_Health_Benefits_Currently_Offered__c.field-meta.xml
<CustomField>
    <fullName>Other_Health_Benefits_Currently_Offered__c</fullName>
    <description>other_health_benefits_currently_offered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Health Benefits Currently Offered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>