force-app/main/default/objects/ZP_Company_Migration__c/fields/Transportation_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Benefits__c</fullName>
    <description>transportation_benefits</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transportation Benefits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>