force-app/main/default/objects/ZP_Company_Migration__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>