force-app/main/default/objects/ZP_Company_Migration__c/fields/Which_Health_Benefits_Currently_Offered__c.field-meta.xml
<CustomField>
    <fullName>Which_Health_Benefits_Currently_Offered__c</fullName>
    <description>which_health_benefits_currently_offered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Which Health Benefits Currently Offered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>